[build-system]
requires = ["setuptools>=74"]
build-backend = "setuptools.build_meta"

[project]
name = "typing-leak"
version = "0.0.0"
description = "typing caches leak extension types at shutdown"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = []

[[tool.setuptools.ext-modules]]
name = "ext"
sources = ["ext.c"]
